--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
+#  get: ^4.6.1
+#  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
