--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
-#  get: ^4.6.1
-#  get_storage: ^2.0.3
+  flutter_custom_tabs: ^1.0.4
+
 
 dev_dependencies:
   flutter_test:
